hphp/test/slow/enum-invalid-base/dict.php.expectf
Fatal error: Invalid base type for enum MyEnum in %s/slow/enum-invalid-base/dict.php on line 3
